     ~RC(palette1=palette2) syntax anymore. ~PAL(palette1>palette2) should
     be used instead
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman
     Ogre/Young Ogre, Trapper
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      German, Finnish, Hebrew, Italian, Russian, Slovak, Turkish
 * AI:
   * Fixed incorrect handling of poisoning attacks when suggesting best attack
     in user interface
 * FormulaAI:
   * Fixed bug #13230: added debug_float FormulaAI function to allow debugging
     via floating popups on the specified hex
   * Added run_file FormulaAI function to allow running .fai scripts directly
     from in-game console
 * User interface:
   * Fixed bug #13257: Attack dialog always uses the active name of a weapon
     special
 * WML Engine:
   * Added [show_objectives] tag (part of bug #13042)
   * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
   * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
     now (bug #13170)

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6:
 * Campaigns:
   * Under the Burning Suns:
     * All portraits now have a transparent background (bug #13135)
 * Graphics:
   * New or updated unit graphics for the Mermaid Priestess and Enchantress
     unit lines
 * Language and i18n:
   * updated translations: Finnish, French, German, Lithuanian, Polish,
     Portuguese (Brazil), Russian, Slovak, Spanish
 * User interface:
   * Grey game titles out when we're missing the era